# mr_miner

./: README.md  license.md  pyproject.toml  test_config.ini
data/dbsnp/: refsnp-chr1.json.bz2  refsnp-chr17.json.bz2  refsnp-chr18.json.bz2  refsnp-chr19.json.bz2  refsnp-chr2.json.bz2  refsnp-chr20.json.bz2  refsnp-chr21.json.bz2  refsnp-chr22.json.bz2  refsnp-chr3.json.bz2  refsnp-chr4.json.bz2  refsnp-chr5.json.bz2  refsnp-chr6.json.bz2  refsnp-chr7.json.bz2  refsnp-chr8.json.bz2  refsnp-chr9.json.bz2  refsnp-chrMT.json.bz2  refsnp-chrX.json.bz2  refsnp-chrY.json.bz2
src/mr_miner/: __init__.py  _version.py  bubble_plotting.py  chrom_info.py  chrom_mapper.py  clean_notebook_outputs.py  config.py  constants.py  create_dbsnp_test_files.py  data_wrappers.py  gene_names.py  hail_rsync.py  harmonizer.py  json_processor.py  main.py  mr_models.py  plink_wrapper.py  plots.py  post_processing.py  pre_processing.py  project_paths_class.py  test_utils.py  utilities.py  variant_correlations.py  variant_ids.py  variant_proxies.py
src/mr_miner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_base_classes.py  test_chrom_mapper.py  test_utilities.py  test_variant_ids.py
