[build-system]
requires = [
    "setuptools>=60",
    "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"
    

[project]
dynamic = ["version"]
name = "mr_miner"
description = "Statistical genetics pipeline for performing mendelian randomization efficiently at scale using public summary data. Currently contains classes to adapt OpenTargets GWAS data for outcomes and GTEX QTLs as exposures, but can be extended to other sources."
readme = "README.md"
dependencies = [
    "numpy",
    "pandas",
    "scipy",
    "tqdm",
    "pyarrow",
    "statsmodels",
    "scikit-learn"
]
authors = [
    {name = "Dylan Skola", email = "dylan@veliatx.com"}
]
requires-python = ">=3.9"
keywords = ["keyword1", "keyword2"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9"]

[project.scripts]
mr_miner = "mr_miner.main:main"

[project.urls]
Documentation = "doc/"
Source = "https://git-codecommit.us-west-2.amazonaws.com/v1/repos/BigProt"

[tool.setuptools_scm]
version_file = "src/mr_miner/_version.py"

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pysam>=0.22",
]

[tool.setuptools.package-data]
mr_miner = ["tests/data/dbsnp/*.json.bz2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=mr_miner"
